sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:20: error: forward reference extends over definition of variable posBleu
  var posBleu=posBlanc+1
              ^DutchFlagAlgo:20: error: forward reference extends over definition of variable posBlanc
  var posBleu=posBlanc+1
              ^